// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delete prop found and deleted 1`] = `
{
  "instanceId": {
    "id": "id",
    "instanceId": "instanceId",
    "props": [
      {
        "id": "propId1",
        "prop": "a",
        "value": "1",
      },
    ],
    "treeId": "treeId",
  },
}
`;

exports[`Delete prop not found and not deleted 1`] = `
{
  "instanceId": {
    "id": "id",
    "instanceId": "instanceId",
    "props": [
      {
        "id": "propId",
        "prop": "b",
        "value": "1",
      },
      {
        "id": "propId1",
        "prop": "a",
        "value": "1",
      },
    ],
    "treeId": "treeId",
  },
}
`;
